<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/group_principal" android:title="Principal">
        <menu>
            <item
                android:id="@+id/nav_inicio"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_calendario"
                android:icon="@drawable/ic_calendar"
                android:title="@string/menu_calendar" />
            <item
                android:id="@+id/nav_recordatorio"
                android:icon="@drawable/ic_notifications"
                android:title="@string/menu_reminders" />
        </menu>
    </item>

    <item android:id="@+id/group_categories" android:title="Categorías">
        <menu>
            <!-- Las categorías dinámicas se cargarán aquí -->
            <item
                android:id="@+id/nav_todas"
                android:icon="@drawable/ic_assignment"
                android:title="@string/menu_all" />
        </menu>
    </item>

    <item android:id="@+id/group_app" android:title="Aplicación">
        <menu>
            <item
                android:id="@+id/nav_ajustes"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
